--- a/package.json
+++ b/package.json
@@ -7,15 +7,24 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "d3": "^5.16.0",
     "firebase": "^8.0.0",
+    "firestore": "^1.1.6",
+    "leaflet": "^1.7.1",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.0.2",
+    "react-loading-skeleton": "^2.1.1",
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-spinners": "^0.9.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-firestore": "^0.14.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
